--- a/package.json
+++ b/package.json
@@ -8,7 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "@fortawesome/fontawesome-free": "^6.5.2",
+    "axios": "^1.6.8",
+    "bootstrap": "^4.6.2",
+    "jquery": "^3.7.1",
+    "jsonwebtoken": "^9.0.2",
+    "popper.js": "^1.16.1",
+    "vee-validate": "^4.12.6",
+    "vue": "^3.3.4",
+    "vue-router": "^4.3.2",
+    "vue-toast-notification": "^3.1.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
